--- a/projects/app/src/app/cinemas-page/edit-cinema/edit-cinema.component.html
+++ b/projects/app/src/app/cinemas-page/edit-cinema/edit-cinema.component.html
@@ -26,7 +26,7 @@
   Cinema Rooms:
 
   <!-- new cinema room block -->
-  <app-new-cinema-room-block></app-new-cinema-room-block>
+  <app-new-cinema-room-block [cinema]="cinema!"></app-new-cinema-room-block>
 
   <!-- Display List of rooms -->
   <ul class="space-y-4">
