--- a/projects/app/src/app/navbar/navbar.component.html
+++ b/projects/app/src/app/navbar/navbar.component.html
@@ -22,6 +22,7 @@
   </div>
   <div class="navbar-center hidden md:flex">
     <ul class="menu menu-horizontal p-0">
+      <li><a routerLink="/home">Home</a></li>
       <li><a routerLink="/movies">Movies</a></li>
       <li><a routerLink="/cinemas">Cinemas</a></li>
     </ul>
