separated cinema rooms from cinema

--- a/projects/app/src/app/cinemas-page/edit-cinema/edit-cinema.component.html
+++ b/projects/app/src/app/cinemas-page/edit-cinema/edit-cinema.component.html
@@ -30,7 +30,7 @@
 
   <!-- Display List of rooms -->
   <ul class="space-y-4">
-    <li *ngFor="let item of cinema?.cinemaRooms">
+    <li *ngFor="let item of cinemaRooms">
       <app-cinema-room-item [cinemaRoomItem]="item"></app-cinema-room-item>
     </li>
   </ul>
