added stats to cinema room item

--- a/projects/app/src/app/cinemas-page/edit-cinema/edit-cinema.component.html
+++ b/projects/app/src/app/cinemas-page/edit-cinema/edit-cinema.component.html
@@ -16,9 +16,7 @@
       formControlName="location"
     />
 
-    <button class="btn btn-primary" type="submit">
-      Save
-    </button>
+    <button class="btn btn-primary" type="submit">Save</button>
   </form>
 </div>
 
@@ -34,5 +32,4 @@
 
   <!-- new cinema room block -->
   <app-new-cinema-room-block [cinema]="cinema!"></app-new-cinema-room-block>
-
 </div>
