--- a/projects/app/src/app/app.component.html
+++ b/projects/app/src/app/app.component.html
@@ -7,7 +7,7 @@
     </header>
 
     <main>
-      <div class="container mx-auto my-10 px-5">
+      <div class="max-w-6xl mx-auto my-10 px-5">
         <router-outlet></router-outlet>
       </div>
     </main>
