--- a/projects/app/src/app/navbar/navbar.component.html
+++ b/projects/app/src/app/navbar/navbar.component.html
@@ -1,34 +1,35 @@
-<div class="navbar bg-base-200">
-  <div class="navbar-start">
-    <div class="dropdown">
-      <label for="my-drawer-3" class="btn btn-ghost md:hidden">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-5 w-5"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M4 6h16M4 12h8m-8 6h16"
-          />
-        </svg>
-      </label>
+<div class="bg-base-200 flex justify-center">
+  <div class="navbar max-w-6xl">
+    <div class="navbar-start">
+      <div class="dropdown">
+        <label for="my-drawer-3" class="btn btn-ghost md:hidden">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-5 w-5"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h8m-8 6h16"
+            />
+          </svg>
+        </label>
+      </div>
+      <a class="btn btn-ghost normal-case text-xl" routerLink="/">Gala Web</a>
     </div>
-    <a class="btn btn-ghost normal-case text-xl" routerLink="/">Gala Web</a>
-  </div>
-  <div class="navbar-center hidden md:flex">
-    <ul class="menu menu-horizontal p-0">
-      <li><a routerLink="/home">Home</a></li>
-      <li><a routerLink="/movies">Movies</a></li>
-      <li><a routerLink="/cinemas">Cinemas</a></li>
-    </ul>
-  </div>
-
-  <div class="navbar-end">
-    <app-navbar-theme-toggle></app-navbar-theme-toggle>
+    <div class="navbar-center hidden md:flex">
+      <ul class="menu menu-horizontal p-0">
+        <li><a routerLink="/home">Home</a></li>
+        <li><a routerLink="/movies">Movies</a></li>
+        <li><a routerLink="/cinemas">Cinemas</a></li>
+      </ul>
+    </div>
+    <div class="navbar-end">
+      <app-navbar-theme-toggle></app-navbar-theme-toggle>
+    </div>
   </div>
 </div>
