removed references to sholace components

--- a/projects/app/src/app/movies-page/manage-add-movie/manage-add-movie.component.html
+++ b/projects/app/src/app/movies-page/manage-add-movie/manage-add-movie.component.html
@@ -23,10 +23,7 @@
       Runtime: {{ tmdbMovieDetails?.runtime }} <br />
       Release Date: {{ tmdbMovieDetails?.release_date }} <br /> 
       <div class="items-center space-x-2">
-        Genre: 
-        <sl-tag pill="true" variant="danger">hello</sl-tag>
-        <sl-tag pill="true" variant="danger">hello</sl-tag>
-        <sl-tag pill="true" variant="danger">hello</sl-tag>
+        Genre: hello hello hello
       </div>
     
     </div>
@@ -36,9 +33,9 @@
     {{ tmdbMovieDetails?.overview }} <br />
     
     <div class="text-center my-12">
-      <sl-button class="w-2/4" variant="success">
+      <button class="w-2/4" variant="success">
         <span class="uppercase">Add Movie</span>
-      </sl-button>
+      </button>
     </div>
 
   </div>
