--- a/projects/app/src/app/movies-page/movie-item/movie-item.component.html
+++ b/projects/app/src/app/movies-page/movie-item/movie-item.component.html
@@ -12,7 +12,7 @@
         <div class="flex-grow">
           <p class="text-2xl font-semibold">{{ movieItem.title }}</p>
           <p class="text-sm items-center">
-            <sl-icon name="calendar3"></sl-icon> {{ movieItem.releaseDate }}
+            {{ movieItem.releaseDate }}
           </p>
         </div>
       </div>
