reintegrated movie details component

--- a/projects/app/src/app/movies/components/movie-list/movie-list.component.html
+++ b/projects/app/src/app/movies/components/movie-list/movie-list.component.html
@@ -1,8 +1,7 @@
-<ul>
-  <li *ngIf="movies != null && movies.length > 0">
+<ul class="menu w-full shadow-none">
+  <li *ngFor="let item of movies; index as i">
     <app-movie-item
-      *ngFor="let item of movies"
-      [movieItem]="item"
+    [movieItem]="item"
     ></app-movie-item>
   </li>
 </ul>
