--- a/projects/app/src/app/movies/components/movie-item/movie-item.component.html
+++ b/projects/app/src/app/movies/components/movie-item/movie-item.component.html
@@ -1,24 +1,24 @@
-<div
-  class="bg-base-200 shadow shadow-neutral-focus rounded-md overflow-hidden hover:bg-base-300/20 transition"
->
-  <div class="flex flex-row">
-    <img
-      class="object-cover w-40 h-60 flex-none"
-      src="{{ posterImageUrl }}"
-      alt="{{ movieItem.title }}"
-    />
-    <div class="flex-grow p-5">
-      <div class="flex flex-row">
-        <div class="flex-grow">
-          <p class="text-2xl font-semibold">{{ movieItem.title }}</p>
-          <p class="text-sm items-center">
-            {{ movieItem.releaseDate }}
-          </p>
-        </div>
-      </div>
-      <p class="text-neutral-400 text-sm pt-5">
-        {{ movieItem.overview }}
-      </p>
+<div class="w-full">
+  <div class="flex flex-row items-center">
+    <div class="grow" (click)="onSelect()">
+      <p class="text-lg">{{ movieItem.title }}</p>
+      <p class="text-sm">{{ movieItem.releaseDate }}</p>
+    </div>
+    <div class="flex-none">
+      <button class="btn btn-outline btn-error btn-xs btn-circle">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-4 w-4"
+          viewBox="0 0 20 20"
+          fill="currentColor"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            clip-rule="evenodd"
+          />
+        </svg>
+      </button>
     </div>
   </div>
 </div>
