--- a/projects/app/src/app/movies/movie-detail/movie-detail.component.html
+++ b/projects/app/src/app/movies/movie-detail/movie-detail.component.html
@@ -1,35 +1,28 @@
-<div class="container mx-auto bg-neutral-900 rounded-t-2xl overflow-y-hidden">
-  
-  <div class="h-96 bg-no-repeat bg-fixed bg-center bg-cover" style="background:fixed top no-repeat url({{backdropImageUrl}})">
-    <div class="h-96 bg-gradient-to-t from-neutral-900 via-transparent items-end">
-    </div>
-  </div>
-  
-  <!-- Poster and Tagline -->
-  <div class="top-96 mx-12 -mt-56 flex items-end space-x-5">
-    <img class="rounded-md w-48 h-72 object-cover" src="{{ posterImageUrl }}" />
-    <div class="basis-full text-center pb-12">
-      <span class="text-neutral-400 text-3xl italic">"{{ movie.tagline }}"</span>
-    </div>
-  </div>
-
-  <!-- Title and other Movie Details -->
-  <div class="mx-12">
-    <span class="text-5xl block text-center mb-12">{{ movie.title }}</span>
-
-    <div class="bg-black block -mx-12 px-12 py-5 text-center">
-      Runtime: {{ movie.runtime }} <br />
-      Release Date: {{ movie.releaseDate }} <br /> 
-      <div class="items-center space-x-2">
-        Genre: hello hello hello
+<div>
+  <div class="flex flex-row items-center">
+    <div class="bg-base-200/50 grow text-center space-y-5 py-5">
+      <span class="text-4xl">{{ movie.title }} ({{ movie.releaseDate | date:'YYYY' }}) </span>
+      <div class="flex flex-row justify-center space-x-2">
+        <div class="badge badge-accent">Genre</div>
+        <div class="badge badge-warning">Rating</div>
       </div>
-    
+    </div>
+    <div class="mx-2 flex-none w-40">
+      <img class="object-cover w-40 rounded-md" src="{{ posterImageUrl }}" />
     </div>
 
-    <br />
-    <span class="text-xl italic block">Overview:</span>
-    {{ movie.overview }} <br />
-
+  </div>
+  <div>
+    <article class="prose">
+      <blockquote class="mx-10">
+        <p>{{ movie.tagline }}</p>
+      </blockquote>
+      <p>
+        <strong><em>Overview</em></strong> <br>
+        {{ movie.overview }}
+      </p>
+    </article>
   </div>
 
+  <button class="btn btn-primary btn-block">Edit Details</button>
 </div>
