extracted movie-page related state items to separate feature

--- a/projects/app/src/app/movies/components/movie-item/movie-item.component.html
+++ b/projects/app/src/app/movies/components/movie-item/movie-item.component.html
@@ -1,6 +1,6 @@
 <div class="w-full">
   <div class="flex flex-row items-center">
-    <div class="grow" (click)="onSelect()">
+    <div class="grow" (click)="onClick()">
       <p class="text-lg">{{ movieItem.title }}</p>
       <p class="text-sm">{{ movieItem.releaseDate | date:'mediumDate' }}</p>
     </div>
