--- a/projects/app/src/app/movies/components/movie-list/movie-list.component.html
+++ b/projects/app/src/app/movies/components/movie-list/movie-list.component.html
@@ -1,9 +1,10 @@
 <button class="btn btn-block" (click)="searchClick()">Search For Movie</button>
 <div class="divider lg:divider-horizontal"></div>
 <ul class="menu w-full shadow-none">
-  <li *ngFor="let item of movies; index as i">
+  <li *ngFor="let movie of movies; index as i">
     <app-movie-item
-    [movieItem]="item"
+      [movieItem]="movie"
+      [ngClass]="{ active: i === activeMovieId }"
     ></app-movie-item>
   </li>
 </ul>
