--- a/projects/app/src/app/movies/movies-page/movies-page.component.html
+++ b/projects/app/src/app/movies/movies-page/movies-page.component.html
@@ -2,7 +2,7 @@
 
 <div class="w-full flex flex-row space-x-2 mt-10">
   <div class="w-5/12">
-    <app-movie-list [movies]="movies$ | async" (onSearch)="searchClicked()"></app-movie-list>
+    <app-movie-list [movies]="movies$ | async" [activeMovieId]="activeMovieId$ | async" (onSearch)="searchClicked()"></app-movie-list>
   </div>
   <div class="w-7/12">
     <div class="w-full">
