--- a/projects/app/src/app/movies/components/search-movie-form/search-movie-form.component.html
+++ b/projects/app/src/app/movies/components/search-movie-form/search-movie-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="searchMovieForm" (ngSubmit)="searchMovieHandler()">
+<form [formGroup]="searchMovieForm" (ngSubmit)="submitHandler()">
   <div class="form-control">
     <div class="input-group">
       <input
@@ -7,7 +7,7 @@
         class="input input-bordered grow"
         formControlName="queryTitle"
       />
-      <button class="btn btn-square btn-primary" type="submit">
+      <button class="btn" [disabled]="!searchMovieForm.valid" type="submit">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-6 w-6"
