--- a/projects/app/src/app/movies/movie-detail/movie-detail.component.html
+++ b/projects/app/src/app/movies/movie-detail/movie-detail.component.html
@@ -24,5 +24,5 @@
     </article>
   </div>
 
-  <button class="btn btn-primary btn-block">Edit Details</button>
+  <button class="btn btn-primary btn-block" (click)="editHandler()">Edit Details</button>
 </div>
