edited styles and layout

--- a/projects/app/src/app/movies/components/movie-item/movie-item.component.html
+++ b/projects/app/src/app/movies/components/movie-item/movie-item.component.html
@@ -2,10 +2,13 @@
   <div class="flex flex-row items-center">
     <div class="grow" (click)="clickHandler()">
       <p class="text-lg">{{ movieItem.title }}</p>
-      <p class="text-sm">{{ movieItem.releaseDate | date:'mediumDate' }}</p>
+      <p class="text-sm">{{ movieItem.releaseDate | date: "mediumDate" }}</p>
     </div>
     <div class="flex-none">
-      <button class="btn btn-outline btn-error btn-xs btn-circle" (click)="deleteHandler()">
+      <button
+        class="btn btn-outline btn-error btn-xs btn-circle"
+        (click)="deleteHandler()"
+      >
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-4 w-4"
