--- a/projects/app/src/app/movies/components/movie-list/movie-list.component.html
+++ b/projects/app/src/app/movies/components/movie-list/movie-list.component.html
@@ -1,8 +1,9 @@
-<button class="btn btn-block" (click)="searchClick()">Search For Movie</button>
-<div class="divider lg:divider-horizontal"></div>
+<button class="btn btn-block" (click)="searchClick()">Search for Movie</button>
+<div class="divider"></div>
 <ul class="menu w-full shadow-none">
-  <li *ngFor="let movie of movies; index as i">
-    <app-movie-item
+  <li class="my-1"
+  *ngFor="let movie of movies; index as i">
+    <app-movie-item class="rounded-md"
       [movieItem]="movie"
       [ngClass]="{ active: i === activeMovieId }"
     ></app-movie-item>
