--- a/projects/app/src/app/movies/components/search-movie-item/search-movie-item.component.html
+++ b/projects/app/src/app/movies/components/search-movie-item/search-movie-item.component.html
@@ -1,30 +1,20 @@
-<div
-  class="card sm:card-side bg-base-200 shadow shadow-neutral rounded-md overflow-hidden hover:bg-base-300/20 transition"
->
-  <figure class="sm:w-40 h-60 w-full flex-none overflow-hidden">
+<div class="w-36">
+  <div class="tooltip bg-accent/0 hover:bg-accent rounded-md" [attr.data-tip]="resultItem.title">
     <img
-      class="object-cover w-full h-full"
-      src="{{ cardImageUrl }}"
-      alt="{{ resultItem.title }}"
+      class="search-movie-item w-36 h-56 transition-all rounded-md hover:translate-x-1 hover:-translate-y-1"
+      [src]="cardImageUrl"
     />
-  </figure>
-  <div class="card-body p-5">
-    <h2 class="card-title">{{ resultItem.title }}</h2>
-    <p class="text-xs">{{ resultItem.release_date }}</p>
-    <p class="text-xs">
-      {{ resultItem.overview }}
-    </p>
-    <div class="card-actions justify-end">
-      <button
-        class="btn btn-success btn-outline"
-        (click)="onAddMovie()"
-        *ngIf="!isMovieAdded"
-      >
-        + Add Movie
-      </button>
-      <button class="btn btn-success btn-disabled" *ngIf="isMovieAdded">
-        Added
-      </button>
-    </div>
+  </div>
+  <div class="mt-2">
+    <button
+      class="btn btn-success btn-outline btn-block"
+      (click)="onAddMovie()"
+      *ngIf="!isMovieAdded"
+    >
+      + Add Movie
+    </button>
+    <button class="btn btn-success btn-disabled btn-block" *ngIf="isMovieAdded">
+      Added
+    </button>
   </div>
 </div>
