--- a/projects/app/src/app/movies/movie-detail/movie-detail.component.html
+++ b/projects/app/src/app/movies/movie-detail/movie-detail.component.html
@@ -1,16 +1,27 @@
 <div>
-  <div class="flex flex-row items-center">
-    <div class="bg-base-200/50 grow text-center space-y-5 py-5">
-      <span class="text-4xl">{{ movie.title }} ({{ movie.releaseDate | date:'YYYY' }}) </span>
-      <div class="flex flex-row justify-center space-x-2">
+  <div class="text-center">
+    <div
+      class="h-80 rounded-t-md bg-cover"
+      style="background:url({{backdropImageUrl}})"
+    >
+      <div
+        class="h-80 bg-gradient-to-t from-base-100 via-transparent flex flex-row place-items-center"
+      >
+        <img
+          class="object-cover w-36 h-56 ml-5 shadow-2xl shadow-base-100 rounded-md"
+          src="{{ posterImageUrl }}"
+        />
+      </div>
+    </div>
+    <div class="-translate-y-8">
+      <span class="text-4xl"
+        >{{ movie.title }} ({{ movie.releaseDate | date: "YYYY" }})</span
+      >
+      <div class="flex flex-row justify-center space-x-2 mt-5">
         <div class="badge badge-accent">Genre</div>
         <div class="badge badge-warning">Rating</div>
       </div>
     </div>
-    <div class="mx-2 flex-none w-40">
-      <img class="object-cover w-40 rounded-md" src="{{ posterImageUrl }}" />
-    </div>
-
   </div>
   <div>
     <article class="prose">
@@ -18,11 +29,16 @@
         <p>{{ movie.tagline }}</p>
       </blockquote>
       <p>
-        <strong><em>Overview</em></strong> <br>
+        <strong
+          ><em><span class="prose-xl">Overview</span> </em></strong
+        >
+        <br />
         {{ movie.overview }}
       </p>
     </article>
   </div>
 
-  <button class="btn btn-primary btn-block" (click)="editHandler()">Edit Details</button>
+  <button class="btn btn-primary btn-block mt-4" (click)="editHandler()">
+    Edit Details
+  </button>
 </div>
