--- a/projects/app/src/app/navbar/navbar.component.html
+++ b/projects/app/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="bg-base-200 flex justify-center">
+<div class="bg-base-200/10 flex justify-center">
   <div class="navbar max-w-6xl">
     <div class="navbar-start">
       <div class="dropdown">
