--- a/projects/app/src/styles.css
+++ b/projects/app/src/styles.css
@@ -9,6 +9,10 @@
   outline: none;
 }
 
+/* body {
+  background-color: #0093e9;
+  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+} */
 
 /* input.form-input {
   @apply px-3 py-1.5 text-inherit
