--- a/projects/app/src/app/cinemas/cinemas-page/cinemas-page.component.html
+++ b/projects/app/src/app/cinemas/cinemas-page/cinemas-page.component.html
@@ -1,15 +1,22 @@
-<span class="text-3xl">Cinemas</span>
+<span class="text-3xl">Manage Cinemas</span>
 
-<div class="flex flex-col my-5 space-y-4">
-  
-  <!-- add cinema block -->
+<div class="w-full flex flex-row space-x-2 mt-10">
+  <div class="w-5/12">
+    <app-cinema-list [cinemas]="cinemas$ | async" (onAddCinemaClick)="addCinemaHandler()"></app-cinema-list>
+  </div>
+  <div class="w-7/12">
+    <div class="w-full">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="flex flex-col my-5 space-y-4">
   <app-new-cinema-block></app-new-cinema-block>
 
-  <!-- display cinema list -->
   <ul class="space-y-4">
     <li *ngFor="let item of cinemas">
       <app-cinema-item [cinemaItem]="item"></app-cinema-item>
     </li>
   </ul>
-  
-</div>
+</div> -->
