--- a/projects/app/src/app/cinemas/cinema-detail/cinema-detail.component.html
+++ b/projects/app/src/app/cinemas/cinema-detail/cinema-detail.component.html
@@ -1,2 +1,2 @@
-Cinema Name: {{ cinema.name }} <br/>
-Location: {{ cinema.location }}
+Cinema Name: {{ cinema?.name }} <br/>
+Location: {{ cinema?.location }}
