added icons for editing and deleting

--- a/projects/app/src/app/shared/list-menu-item/list-menu-item.component.html
+++ b/projects/app/src/app/shared/list-menu-item/list-menu-item.component.html
@@ -6,18 +6,18 @@
     </div>
     <div class="flex-none">
       <button
-        class="btn btn-outline btn-error btn-xs btn-circle"
+        class="btn btn-link btn-xs text-error/50 hover:text-error/100"
         (click)="deleteHandler()"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="h-4 w-4"
+          class="h-5 w-5"
           viewBox="0 0 20 20"
           fill="currentColor"
         >
           <path
             fill-rule="evenodd"
-            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            d="M10 18a8 8 0 100-16 8 8 0 000 16zM7 9a1 1 0 000 2h6a1 1 0 100-2H7z"
             clip-rule="evenodd"
           />
         </svg>
