--- a/projects/app/src/app/cinemas/cinema-detail/cinema-detail.component.html
+++ b/projects/app/src/app/cinemas/cinema-detail/cinema-detail.component.html
@@ -22,8 +22,45 @@ Location: {{ (cinema$ | async)?.location }}
       <tr *ngFor="let room of rooms$ | async; index as i">
         <th>{{ i + 1 }}</th>
         <td>{{ room.name }}</td>
-        <td class="px-2"><button class="btn btn-primary btn-outline btn-square">E</button></td>
-        <td class="px-2"><button class="btn btn-error btn-outline btn-square">X</button></td>
+        <td class="px-2">
+          <button
+            class="btn btn-link btn-square btn-sm text-base-content hover:text-info"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-5 w-5"
+              viewBox="0 0 20 20"
+              fill="currentColor"
+            >
+              <path
+                d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z"
+              />
+              <path
+                fill-rule="evenodd"
+                d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </button>
+        </td>
+        <td class="px-2">
+          <button
+            class="btn btn-link btn-square btn-sm text-base-content hover:text-error"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-5 w-5"
+              viewBox="0 0 20 20"
+              fill="currentColor"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M10 18a8 8 0 100-16 8 8 0 000 16zM7 9a1 1 0 000 2h6a1 1 0 100-2H7z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </button>
+        </td>
       </tr>
       <!-- <tr>
         <td colspan="4" class="bg-rose-500">
