implement edit room

--- a/projects/app/src/app/cinemas/edit-cinema/edit-cinema.component.html
+++ b/projects/app/src/app/cinemas/edit-cinema/edit-cinema.component.html
@@ -26,7 +26,7 @@
   <!-- Display List of rooms -->
   <ul class="space-y-4">
     <li *ngFor="let item of cinemaRooms">
-      <app-cinema-room-item [cinemaRoomItem]="item"></app-cinema-room-item>
+      <app-room-item [room]="item"></app-room-item>
     </li>
   </ul>
 
