--- a/projects/app/src/app/cinemas/edit-cinema/edit-cinema.component.html
+++ b/projects/app/src/app/cinemas/edit-cinema/edit-cinema.component.html
@@ -31,5 +31,5 @@
   </ul>
 
   <!-- new cinema room block -->
-  <app-new-cinema-room-block [cinema]="cinema!"></app-new-cinema-room-block>
+  <app-add-room-item></app-add-room-item>
 </div>
