--- a/projects/app/src/app/cinemas/components/add-new-item/add-new-item.component.html
+++ b/projects/app/src/app/cinemas/components/add-new-item/add-new-item.component.html
@@ -12,17 +12,17 @@
     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mx-1" viewBox="0 0 20 20" fill="currentColor">
       <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-11a1 1 0 10-2 0v2H7a1 1 0 100 2h2v2a1 1 0 102 0v-2h2a1 1 0 100-2h-2V7z" clip-rule="evenodd" />
     </svg>
-    Add New Room
+    {{ addLabel }}
   </div>
 
   <div [ngClass]="{ hidden: !isFormShown }">
-    <form [formGroup]="roomForm" (ngSubmit)="submitHandler()">
+    <form [formGroup]="nameForm" (ngSubmit)="submitHandler()">
       <div class="w-full flex flex-row items-center">
         <div class="w-full">
           <input
             class="input input-bordered"
             name="name"
-            placeholder="New Room Name"
+            placeholder="{{ placeholder }}"
             formControlName="name"
           />
         </div>
