--- a/projects/app/src/app/cinemas/components/add-new-item/add-new-item.component.html
+++ b/projects/app/src/app/cinemas/components/add-new-item/add-new-item.component.html
@@ -27,7 +27,7 @@
           />
         </div>
 
-        <div>
+        <div class="flex flex-row shrink-0">
           <button
             type="submit"
             class="btn btn-link btn-square btn-sm text-base-content hover:text-success"
