add routing to schedules page

--- a/projects/app/src/app/navbar/navbar.component.html
+++ b/projects/app/src/app/navbar/navbar.component.html
@@ -26,6 +26,7 @@
         <li><a routerLink="/home">Home</a></li>
         <li><a routerLink="/movies">Movies</a></li>
         <li><a routerLink="/cinemas">Cinemas</a></li>
+        <li><a routerLink="/schedules">Schedules</a></li>
       </ul>
     </div>
     <div class="navbar-end">
