--- a/projects/app/src/app/schedules/schedules-page/schedules-page.component.html
+++ b/projects/app/src/app/schedules/schedules-page/schedules-page.component.html
@@ -2,7 +2,7 @@
 
 <div class="w-full flex flex-row space-x-2 mt-10">
   <div class="w-5/12">
-    Schedules list
+    <app-schedules-side></app-schedules-side>
     <!-- <app-cinema-list
       [cinemas]="cinemas$ | async"
       [activeCinemaId]="activeCinemaId$ | async"
