--- a/projects/app/src/app/schedules/schedule-detail/schedule-detail.component.html
+++ b/projects/app/src/app/schedules/schedule-detail/schedule-detail.component.html
@@ -1,1 +1,22 @@
-<p>schedule-detail works!</p>
+<div class="overflow-x-auto">
+  <table class="table w-full">
+    <!-- head -->
+    <thead>
+      <tr>
+        <th></th>
+        <th>Schedule</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- row 1 -->
+      <tr *ngFor="let schedule of schedules$ | async; index as i">
+        <th>{{ i + 1 }}</th>
+        <td>
+          <app-schedule-detail-item
+            [schedule]="schedule"
+          ></app-schedule-detail-item>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
