--- a/projects/app/src/app/schedules/components/schedule-item/schedule-item.component.html
+++ b/projects/app/src/app/schedules/components/schedule-item/schedule-item.component.html
@@ -1,7 +1,32 @@
-<div class="flex flex-row">
-    <div>{{ schedule.startTime | date:'shortTime' }}</div>
-    <div>{{ schedule.endTime| date:'shortTime' }}</div>
+<div class="flex flex-row items-center">
+  <div class="flex flex-row w-full">
+    <div>{{ schedule.startTime | date: "shortTime" }}</div>
+    <div>{{ schedule.endTime | date: "shortTime" }}</div>
     <div>{{ schedule.dayOfWeek }}</div>
     <div>{{ (movie$ | async)?.title }}</div>
     <div>{{ schedule.ticketPrice }}</div>
+  </div>
+  <div>
+    <button
+      type="button"
+      class="btn btn-link btn-square btn-sm text-base-content hover:text-info"
+      (click)="editHandler()"
+    >
+      <!-- prettier-ignore -->
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                <path d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z" />
+                <path fill-rule="evenodd" d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z" clip-rule="evenodd" />
+              </svg>
+    </button>
+    <button
+      type="button"
+      class="btn btn-link btn-square btn-sm text-base-content hover:text-error"
+      (click)="deleteHandler()"
+    >
+      <!-- prettier-ignore -->
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM7 9a1 1 0 000 2h6a1 1 0 100-2H7z" clip-rule="evenodd" />
+              </svg>
+    </button>
+  </div>
 </div>
